<resources>
    <string name="app_name">TrainTicketing</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="label_date">Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="search">Search</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_name">Name</string>
    <string name="label_identification">ID Number</string>
    <string name="label_cc_type">Credit Card Type</string>
    <string name="label_cc_number">Credit Card Number</string>
    <string name="label_cc_validity">Credit Card Validity</string>
    <string name="buy">Buy</string>
    <string name="tickets">Tickets</string>
    <string name="unused_tickets">Unused Tickets</string>
    <string name="logout">Logout</string>
    <string name="label_route_distance">Distance</string>
    <string name="label_route_price">Price</string>
    <string name="label_route_waiting_time">Waiting Time</string>
    <string name="label_station">Station</string>
    <string name="label_time">Time</string>
    <string name="ticket_1">Ticket #1</string>
    <string name="ticket_2">Ticket #2</string>
    <string name="text_offline_logged_in">You\'re in offline mode.\n\nYou can check your unused tickets.\n\nGo online for full functionality of the app. </string>
    <string name="text_offline_not_logged_in">You\'re in offline mode and you aren\'t logged in.\n\nGo online for full functionality of the app. </string>
    <string-array name="credit_card_types">
        <item>VISA</item>
        <item>VISAELECTRON</item>
        <item>MASTERCARD</item>
        <item>AE</item>
        <item>JCB</item>
        <item>OTHER</item>
    </string-array>
    <string name="title_activity_check">check</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
